--- a/src/app/Pages/dragonball/dragonball-page.html
+++ b/src/app/Pages/dragonball/dragonball-page.html
@@ -1,10 +1,25 @@
 <h1>Dragon ball page</h1>
 <section class="row">
   <div class="col-12 col-md-6">
-    <h3>Agregar:</h3>
-    <input type="text" class="form-control" placeholder="Nombre">
-    <input type="number" class="form-control mt-2" placeholder="Poder">
-    <button class="mt-2 btn btn-primary">Agregar</button>
+    <h3>Agregar: {{name()}}</h3>
+    <input
+    type="text"
+    class="form-control"
+    placeholder="Nombre"
+    [value]="name()"
+    (change)="name.set(txtName.value)"
+    #txtName/>
+
+
+    <input
+      type="number"
+      class="form-control mt-2"
+      placeholder="Poder"
+      [value]="power()"
+      (change)="power.set(+txtPower.value)"
+      #txtPower
+      />
+    <button (click)="addCharacter()" class="mt-2 btn btn-primary">Agregar</button>
   </div>
   <div class="col-12 col-sm-6">
     <h3>Listado</h3>
