--- a/src/app/components/shared/navbar/navbar.html
+++ b/src/app/components/shared/navbar/navbar.html
@@ -26,4 +26,5 @@
   <!-- <a routerLink="/hero">Hero</a> -->
    <a [routerLink]="['/hero']" [routerLinkActive] = "'active'">Hero</a>
    <a [routerLink]="['/dragonball']" [routerLinkActive] = "'active'">Dragonball</a>
+   <a routerLink="/dragonball-super" routerLinkActive="active">Dragonball Super</a>
 </nav>
